# kinect_wrapper

./: .gitmodules  CMakeLists.txt
applications/: CMakeLists.txt
applications/singleKinectTest/: CMakeLists.txt  MaskGenerator.cpp  MaskGenerator.h  SKPFaceDetector.cpp  SKPFaceDetector.h  SMColorBlob.cpp  SMColorBlob.h  YOLOSegmentation.py  colorBlobTest.cpp  person_find.py  singleKinectTest.cpp
applications/singleKinectTest/ColorBlob/: MaskGenerator.cpp  MaskGenerator.h  SMColorBlob.cpp  YOLOSegmentation.py
libkinectwrapper/: CMakeLists.txt
libkinectwrapper/include/: SKPRAprilTag.h  SKPRDepthRegister.h  SKPacket.h  SKWrapper.h
libkinectwrapper/src/: SKComputeXYZImage.cpp  SKPRAprilTag.cpp  SKPRDepthRegister.cpp  SKPacket.cpp  SKWrapper.cpp
share/: CMakeLists.txt
